chore(env): created HORIZON_PREFIX variable and updated other values

--- a/.env.example
+++ b/.env.example
@@ -33,10 +33,12 @@ FORWARD_DB_PORT=3325
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
-CACHE_STORE=database
+CACHE_STORE=redis
 CACHE_PREFIX=log_analyzer_local_cache_
+
+HORIZON_PREFIX=log_analyzer_local_horizon_
 
 MEMCACHED_HOST=127.0.0.1
 
