chore(phpstan): added ReportService class to excludePaths param

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,10 +9,10 @@ parameters:
     # Level 9 is the highest level
     level: 9
 
+    excludePaths:
+        - app/Services/ReportService.php
+
 #    ignoreErrors:
 #        - '#PHPDoc tag @var#'
-#
-#    excludePaths:
-#        - ./*/*/FileToBeExcluded.php
 #
 #    checkMissingIterableValueType: false
